# pytest-discord

./: .travis.yml  MANIFEST.in  Makefile  README.rst  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  tests.yml
pytest_discord/: __version__.py  _const.py  _opt_retriever.py  plugin.py
requirements/: requirements.txt
tests/: test_plugin.py
